Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-12.17.2
-----------
  o Daniel Culbert found and fixed a bug in the polyphase effect
    that occurs on platforms that rand() can return large values.
    The bug resulted in polyphase resampling an audio file to a
    different rate then it said it was.
  o Stan Seibert contributed a handler for Ogg Vorbis files.  It
    handles all input formats but can only save using default
    settings.
  o Darrick Servis has made major cleanups in the code in regards
    to error conditions.  Helps people using libst.
  o Darrick Servis has added added optional seek functionality sox.
    Several formats have been modified to make use of this.
  o Geoff Kuenning rewrote the average effect into a general-purpose
    parametric mapping from N channels to M channels.
  o Geoff Kuenning added an optional delay-time parameter to the compander
    effect to allow companding to effectively operate based on future
    knowledge.
  o Geoff Kuenning Added support to fade and trim effect for specifying time
    in hh:mm:ss.frac format.
    Fixed a bug that caused integer overflow when large start/stop times
    were used.
  o Geoff Kuenning updated play/rec/soxeffect scripts to handle all effects
    added since 12.17. Spell-checked soxexam.1 file.
  o Jimen Ching updated ALSA configure support to auto-detect 4.x or 5.x API
    and compile correctly under those two.  All other versions are unsupported.
  o Merged in the NetBSD package changes into CVS finally.
  o Removed broken support for non-ANSI compilers.
  o Makefile now places the correct path to SoX in the play/rec scripts
    based on configuration script values.
  o Alexander Pevzner provided a fix for OSS driver for sound being
    dropped under heavy CPU loads.  Moved GETBLKSIZE operation
    until after setting up the format (SBLive! was modify the block size
    after changing formats).